# jabberwocky

./: CLAUDE.md  README  airy_disk.py  index.html
FITSStacker/: Package.swift  README.md
SpatialScan/: .gitignore  README.md  pyproject.toml
SpatialScan/docs/: format.md
SpatialScan/spatialscan/: __init__.py  cli.py  fusion.py  geometry.py  odometry.py  quicktime.py  scene.py  spatial.py  stereo.py  synthetic.py
SpatialScan/tests/: conftest.py  test_cli.py  test_geometry.py  test_pipeline.py  test_quicktime.py  test_spatial.py  test_stereo.py
research-fusion-timeline/: 01-q-factor-historical-timeline.md  02-current-projects-targets.md  03-breakeven-definitions.md  04-technical-barriers.md  05-funding-policy.md  06-devils-advocate.md  07-data-quality-check.md  final-report.md  presentation.html
research-quantum-computing/: 01-hardware.md  02-software-algorithms.md  03-applications.md  04-challenges.md  (+5 more)
splatvid/: .gitignore  README.md  gallery.html  mesh_418.html  pyproject.toml
splatvid/docs/: README.md  artifix.md  explainer.html  formats-and-viewer.md  gaussian-splatting.md  neural-renderer-plan.md  overhaul-report.md  performance-and-roadmap.md  pipeline-overview.md  structure-from-motion.md  testing.md
splatvid/scripts/: bench_render.py  make_demo.py
splatvid/splatvid/: __init__.py  artifix.py  ba.py  cli.py  depth_prior.py  diagnostics.py  export.py  features.py  geometry.py  losses.py  mesh.py  model.py  render.py  scale.py  sfm.py  shader.py  synthetic.py  train.py  video.py  view_prior.py  viewer.html
splatvid/tests/: conftest.py  test_artifix.py  test_depth_prior.py  test_diagnostics.py  test_end_to_end.py  test_export.py  test_features.py  test_floater.py  test_geometry.py  test_mesh.py  test_neural.py  test_render.py  test_scale.py  test_sfm_synthetic.py  test_video.py
splatvid/tools/: gen_compare.py  gen_gallery.py
(+18 files in other folders)
